# async_notification

./: CMakeLists.txt
cmake/: config.cmake.in
demo/: CMakeLists.txt  main.cpp
include/: async_notification.hpp  manager.h
include/async_notification/: simple_variable.hpp  unique_ptr.hpp
include/buffers/: optional.h  queue.h  simple_variable.h  unique_ptr.h
